setting-values/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-wordpress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/whitelist-source-range: 192.168.0.0/24
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-wordpress
            port:
              number: 80
